--- a/testng-example/pom.xml
+++ b/testng-example/pom.xml
@@ -34,5 +34,10 @@
             <version>${pom.parent.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
 </project>
