--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>ua.foggger</groupId>
     <artifactId>wrappedelements-examples</artifactId>
     <packaging>pom</packaging>
-    <version>${wrappedelements-examples.version}</version>
+    <version>0.0.1</version>
     <modules>
         <module>wrapped-elements-page-object</module>
         <module>testng-example</module>
@@ -41,9 +41,14 @@
             <version>${webdriver.manager.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.5</version>
         </dependency>
     </dependencies>
 </project>
