--- a/junit4-example/pom.xml
+++ b/junit4-example/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>wrappedelements-examples</artifactId>
-        <groupId>ua.foggger</groupId>
+        <groupId>io.github.bobfrostman</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
     <artifactId>junit4-example</artifactId>
     <dependencies>
         <dependency>
-            <groupId>ua.foggger</groupId>
+            <groupId>io.github.bobfrostman</groupId>
             <artifactId>wrapped-elements-page-object</artifactId>
             <version>${pom.parent.version}</version>
             <scope>test</scope>
