--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.foggger</groupId>
+    <groupId>io.github.bobfrostman</groupId>
     <artifactId>wrappedelements-examples</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1</version>
@@ -26,7 +26,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>ua.foggger</groupId>
+            <groupId>io.github.bobfrostman</groupId>
             <artifactId>wrappedelements</artifactId>
             <version>${wrappedelements.version}</version>
         </dependency>
