--- a/wrapped-elements-page-object/pom.xml
+++ b/wrapped-elements-page-object/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>wrappedelements-examples</artifactId>
-        <groupId>ua.foggger</groupId>
+        <groupId>io.github.bobfrostman</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
