--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>wrapped-elements-page-object</module>
         <module>testng-example</module>
         <module>junit4-example</module>
+        <module>spring-boot-example</module>
     </modules>
 
     <properties>
