--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>testng-example</module>
         <module>junit4-example</module>
         <module>spring-boot-example</module>
+        <module>cucumber-examples</module>
     </modules>
 
     <properties>
